[gd_scene load_steps=3 format=2]

[ext_resource path="res://FourierViewer.tscn" type="PackedScene" id=1]
[ext_resource path="res://FourierTester.gd" type="Script" id=2]

[node name="FourierTester" type="Node2D"]
position = Vector2( 460, 40 )
script = ExtResource( 2 )

[node name="FourierViewer" parent="." instance=ExtResource( 1 )]

[node name="FourierViewer2" parent="." instance=ExtResource( 1 )]
margin_left = 570.0
margin_top = -2.0
margin_right = 1570.0
margin_bottom = 998.0

[node name="FourierViewer3" parent="." instance=ExtResource( 1 )]
margin_top = 530.0
margin_right = 1000.0
margin_bottom = 1530.0

[node name="FourierViewer4" parent="." instance=ExtResource( 1 )]
margin_left = 563.0
margin_top = 519.0
margin_right = 1563.0
margin_bottom = 1519.0
